added wget script for static copy of site - backup

--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "devDependencies": {
     "ldapjs": "latest",
     "q": "latest",
-    "assert": "latest"
+    "assert": "latest",
+    "wget": "latest"
   },
   "scripts": {
-    "staff-listing": "node getStaffFromLDAP.js > dist/directory.json"
+    "staff-listing": "node getStaffFromLDAP.js > dist/directory.json",
+    "library-site": "cd dist; wget -mk http://www.library.virginia.edu"
   }
 }
