adding ability to override the staff listings with a spreadsheet

--- a/package.json
+++ b/package.json
@@ -5,11 +5,16 @@
     "q": "latest",
     "assert": "latest",
     "wget": "latest",
-    "nodeunit": "latest"
+    "google-spreadsheet": "latest",
+    "nodeunit": "latest",
+    "minimist": "latest"
   },
   "scripts": {
     "staff-listing": "node getStaffFromLDAP.js > dist/feeds/directory.json",
     "staff-listing-test": "nodeunit test/directory.js",
+    "staff-listing-override": "node updateStaffFromSpreadsheet.js -f dist/feeds/directory.json > dist/feeds/directory-new.json; mv dist/feeds/directory-new.json dist/feeds/directory.json",
     "library-site": "cd dist/backup; wget -mk http://www.library.virginia.edu"
+  },
+  "dependencies": {
   }
 }
