wget should not respect robots.txt on our site

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "staff-listing-test": "nodeunit test/directory.js",
     "staff-listing-publish": "rsync -avh --delete -e 'ssh -i $HOME/.ssh/id_rsa' dist/feeds/ static01.lib.virginia.edu:/lib_content47/static/feeds",
 
-    "library-site-backup-grab": "cd dist/backup; wget -mk http://www.library.virginia.edu; exit 0",
+    "library-site-backup-grab": "cd dist/backup; wget -erobots=off -mkp http://www.library.virginia.edu; exit 0",
     "library-site-backup-clean": "grep -rl https:// dist/backup/www.library.virginia.edu/ | grep .html$ | xargs -n1 sed -i 's/https:/http:/g'",
     "library-site-backup-publish": "rsync -avh --delete -e 'ssh -i $HOME/.ssh/id_rsa' dist/backup/www.library.virginia.edu/ static01.lib.virginia.edu:/lib_content47/www.library"
   },
