added script to get aggregate social feed for the staff site

--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "group-listing-extend": "node updateGroupsFromWordpress.js -f dist/feeds/directory.json > dist/feeds/directory-new.json; mv dist/feeds/directory-new.json dist/feeds/directory.json",
     "staff-listing-test": "nodeunit test/directory.js",
     "staff-listing-publish": "rsync -avh -e 'ssh -i $HOME/.ssh/id_rsa' dist/feeds/ static01.lib.virginia.edu:/lib_content47/static/feeds",
-
-    "library-listing": "npm run staff-listing", 
-
+    "staff-aggregate-feeds": "node getSocialFeeds.js > dist/feeds/staffSocial.xml",
+    "staff-aggregate-feeds--publish": "rsync -avh -e 'ssh -i $HOME/.ssh/id_rsa' dist/feeds/ static01.lib.virginia.edu:/lib_content47/static/feeds",
+    "library-listing": "npm run staff-listing",
     "library-site-backup-grab": "cd dist/backup; wget -erobots=off -mkp http://www.library.virginia.edu; exit 0",
     "library-site-backup-clean": "grep -rl https:// dist/backup/www.library.virginia.edu/ | grep .html$ | xargs -n1 sed -i 's/https:/http:/g'",
     "library-site-backup-publish": "rsync -avh --delete -e 'ssh -i $HOME/.ssh/id_rsa' dist/backup/www.library.virginia.edu/ static01.lib.virginia.edu:/lib_content47/www.library"
   },
   "dependencies": {
+    "fbgraph": "^1.1.0",
+    "rss": "^1.2.0",
+    "social-aggregate": "git://github.com/uvalib/social-aggregate.git"
   }
 }
