--- a/package.json
+++ b/package.json
@@ -16,16 +16,13 @@
     "banners-sync": "wget http://drupal.lib.virginia.edu/banners -O banners.json; node filter-banner.js > filtered-banners.json; node getBannerImages.js > fb.json; firebase-import --database_url https://uvalib-api.firebaseio.com --path /homebanners --json fb.json --force --service_account /home/bamboo/uvalib-api-firebase-adminsdk-urtjy-b407df0805.json",
     "libraries-sync": "wget http://drupal.lib.virginia.edu/libraries -O libraries.json; node filter-libraries.js > filtered-libraries.json; firebase-import --database_url https://uvalib-api.firebaseio.com --path /libraries --json filtered-libraries.json --force --service_account /home/bamboo/uvalib-api-firebase-adminsdk-urtjy-b407df0805.json",
     "services-sync": "wget http://drupal.lib.virginia.edu/services -O services.json; node filter-services.js > filtered-services.json; firebase-import --database_url https://uvalib-api.firebaseio.com --path /services --json filtered-services.json --force --service_account /home/bamboo/uvalib-api-firebase-adminsdk-urtjy-b407df0805.json",
-    
     "staff-listing": "node getStaffFromLDAP.js > dist/feeds/directory.json",
     "staff-listing-override": "node updateStaffFromSpreadsheet.js -f dist/feeds/directory.json > dist/feeds/directory-new.json; mv dist/feeds/directory-new.json dist/feeds/directory.json",
     "group-listing-extend": "node updateGroupsFromWordpress.js -f dist/feeds/directory.json > dist/feeds/directory-new.json; mv dist/feeds/directory-new.json dist/feeds/directory.json",
     "staff-listing-test": "nodeunit test/directory.js",
     "staff-listing-publish": "rsync -avh -e 'ssh -i $HOME/.ssh/id_rsa' dist/feeds/ static01.lib.virginia.edu:/lib_content47/static/feeds",
-
-    "library-listing": "npm run staff-listing; node makeOldLibraryListing.js > dist/feeds/libraries.json", 
-    "library-listing-publish": "scp dist/feeds/libraries.json static01.lib.virginia.edu:/lib_content47/static/feeds", 
-
+    "library-listing": "npm run staff-listing; node makeOldLibraryListing.js > dist/feeds/libraries.json",
+    "library-listing-publish": "scp dist/feeds/libraries.json static01.lib.virginia.edu:/lib_content47/static/feeds",
     "staff-aggregate-feeds": "node getSocialFeeds.js > dist/feeds/staffSocial.xml",
     "staff-aggregate-feeds--publish": "rsync -avh -e 'ssh -i $HOME/.ssh/id_rsa' dist/feeds/ static01.lib.virginia.edu:/lib_content47/static/feeds",
     "library-site-backup-grab": "cd dist/backup; wget -erobots=off -mkp http://www.library.virginia.edu; exit 0",
@@ -35,6 +32,7 @@
   "dependencies": {
     "fbgraph": "^1.1.0",
     "rss": "^1.2.0",
-    "social-aggregate": "git://github.com/uvalib/social-aggregate.git"
+    "social-aggregate": "git://github.com/uvalib/social-aggregate.git",
+    "vulcanize": "^1.15.3"
   }
 }
