fixed depend for old card component

--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,7 @@
     "uvalib-analytics": "0.0.1",
     "uvalib-button": "0.0.2",
     "uvalib-events-card": "0.0.1",
-    "uvalib-card": "7e3b408f4ce3a0974b18ff7ae4364eb89253dc87",
+    "uvalib-card": "0.0.3",
     "uvalib-alerts": "58d0433b43",
     "uvalib-helper-libs": "1.1.4",
     "uvalib-header": "1.0.3",
