--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "nodeunit": "latest",
     "minimist": "latest",
     "request-json": "latest",
-    "firebase-import": "latest",
-    "gcloud": "latest"
+    "firebase-import": "latest"
   },
   "scripts": {
     "home-component-build": "cd bower_components/uvalib-page/ && vulcanize -o uvalib-homepage.vulcanized.html uvalib-homepage.html --strip-comments",
@@ -24,7 +23,6 @@
     "forms-sync": "wget http://drupal.lib.virginia.edu/forms -O forms.json; node filter-forms.js > filtered-forms.json; firebase-import --database_url https://uvalib-api.firebaseio.com --path /forms --json filtered-forms.json --force --service_account /home/bamboo/uvalib-api-firebase-adminsdk-urtjy-b407df0805.json",
     "destinations-sync": "wget http://drupal.lib.virginia.edu/destinations -O destinations.json; node filter-destinations.js > filtered-destinations.json; firebase-import --database_url https://uvalib-api.firebaseio.com --path /destinations --json filtered-destinations.json --force --service_account /home/bamboo/uvalib-api-firebase-adminsdk-urtjy-b407df0805.json",
     "pages-sync": "wget http://drupal.lib.virginia.edu/pages -O pages.json; node filter-pages.js > filtered-pages.json; firebase-import --database_url https://uvalib-api.firebaseio.com --path /pages --json filtered-pages.json --force --service_account /home/bamboo/uvalib-api-firebase-adminsdk-urtjy-b407df0805.json",
-
     "staff-listing": "node getStaffFromLDAP.js > dist/feeds/directory.json",
     "staff-listing-override": "node updateStaffFromSpreadsheet.js -f dist/feeds/directory.json > dist/feeds/directory-new.json; mv dist/feeds/directory-new.json dist/feeds/directory.json",
     "group-listing-extend": "node updateGroupsFromWordpress.js -f dist/feeds/directory.json > dist/feeds/directory-new.json; mv dist/feeds/directory-new.json dist/feeds/directory.json",
@@ -39,20 +37,21 @@
     "library-site-backup-publish": "rsync -avh --delete -e 'ssh -i $HOME/.ssh/id_rsa' dist/backup/www.library.virginia.edu/ static01.lib.virginia.edu:/lib_content47/www.library"
   },
   "dependencies": {
-    "bower": "^1.8.0",
-    "cheerio": "^0.22.0",
-    "fbgraph": "^1.1.0",
-    "firebase": "^3.9.0",
-    "firebase-admin": "^4.2.1",
-    "imagemagick": "^0.1.3",
-    "imagemin": "^5.2.2",
-    "imagemin-jpegtran": "^5.0.2",
-    "imagemin-pngquant": "^5.0.0",
-    "imagemin-webp": "^4.0.0",
-    "moment": "^2.18.1",
-    "request": "^2.81.0",
-    "rss": "^1.2.0",
+    "@google-cloud/storage": "^1.1.0",
+    "bower": "latest",
+    "cheerio": "latest",
+    "fbgraph": "latest",
+    "firebase": "latest",
+    "firebase-admin": "latest",
+    "imagemagick": "latest",
+    "imagemin": "latest",
+    "imagemin-jpegtran": "latest",
+    "imagemin-pngquant": "latest",
+    "imagemin-webp": "latest",
+    "moment": "latest",
+    "request": "latest",
+    "rss": "latest",
     "social-aggregate": "git://github.com/uvalib/social-aggregate.git",
-    "vulcanize": "^1.15.3"
+    "vulcanize": "latest"
   }
 }
