--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,7 @@
     "uvalib-logos": "0.0.1",
     "uvalib-hours-card": "0.0.1",
     "uvalib-search-box": "0.0.1",
-    "uvalib-models": "0.0.3",
+    "uvalib-models": "master",
     "uvalib-liame": "0.1.0",
     "uvalib-social-links": "0.0.1",
     "uvalib-skip-nav": "0.0.1",
