--- a/bower.json
+++ b/bower.json
@@ -28,7 +28,7 @@
     "uvalib-liame": "0.1.0",
     "uvalib-social-links": "0.0.1",
     "uvalib-skip-nav": "0.0.1",
-    "uvalib-news-section": "0.0.2",
+    "uvalib-news-section": "master",
     "uvalib-footer": "0.1.0",
     "uvalib-theme": "0.0.5",
     "uvalib-nav": "0.0.4",
