--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,7 @@
   "resolutions": {
     "lodash": "^4.17.4",
     "polymer": "^1.7.1",
-    "uvalib-page": "0.0.7",
+    "uvalib-page": "0.0.8",
     "uvalib-banner": "master",
     "uvalib-elements": "0.0.3",
     "uvalib-analytics": "0.0.1",
@@ -36,7 +36,7 @@
     "iron-icons": "^1.2.1"
   },
   "dependencies": {
-    "uvalib-page": "uvalib-components/uvalib-page#latest",
+    "uvalib-page": "uvalib-components/uvalib-page#0.0.8",
     "uvalib-card": "uvalib-components/uvalib-card#7e3b408f4ce3a0974b18ff7ae4364eb89253dc87"
   }
 }
