--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,12 @@ build/Release
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 node_modules
+
+# temp files
+alerts.json
+destinations.json
+filtered-destinations.json
+firebase-admin.json
+libraries.json
+test1.txt
+test2.txt
