fix cachebusting names

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "staff-aggregate-feeds": "node getSocialFeeds.js > dist/feeds/staffSocial.xml",
     "staff-aggregate-feeds--publish": "rsync -avh -e 'ssh -i $HOME/.ssh/id_rsa' dist/feeds/ static01.lib.virginia.edu:/lib_content47/static/feeds",
     "library-site-backup-grab": "cd dist/backup; wget -erobots=off -mp http://www.library.virginia.edu; exit 0",
+    "library-site-backup-fix": "find -iname *\\?ver=* -type f -exec ./prename.pl 's/(.*)\\?ver.*/$1/' {} \\;",
     "library-site-backup-clean": "grep -rl https:// dist/backup/www.library.virginia.edu/ | grep .html$ | xargs -n1 sed -i 's/https:/http:/g'",
     "library-site-backup-publish": "rsync -avh --delete -e 'ssh -i $HOME/.ssh/id_rsa' dist/backup/www.library.virginia.edu/ static01.lib.virginia.edu:/lib_content47/www.library"
   },
