--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "files-sync": "wget -qO- https://drupal.lib.virginia.edu/feeds/files | node filter-files.js ",
     "hours-sync": "wget 'https://api3.libcal.com/api_hours_grid.php?iid=863&format=json&weeks=52' -O hours.json; firebase-import --database_url https://uvalib-api.firebaseio.com --path /hours --json hours.json --force --service_account /home/bamboo/uvalib-api-firebase-adminsdk-urtjy-b407df0805.json",
     "alerts-sync": "wget http://drupal.lib.virginia.edu/alerts -O alerts.json; node filter-alerts.js > filtered-alerts.json; firebase-import --database_url https://uvalib-api.firebaseio.com --path /alerts --json filtered-alerts.json --force --service_account /home/bamboo/uvalib-api-firebase-adminsdk-urtjy-b407df0805.json",
-    "banners-sync": "wget http://drupal.lib.virginia.edu/banners -O banners.json; node filter-banner.js > filtered-banners.json; node getBannerImages.js > fb.json; firebase-import --database_url https://uvalib-api.firebaseio.com --path /homebanners --json fb.json --force --service_account /home/bamboo/uvalib-api-firebase-adminsdk-urtjy-b407df0805.json",
+    "banners-sync": "wget http://drupal.lib.virginia.edu/banners -O banners.json; node filter-banner.js > filtered-banners.json; node getBannerImages.js > fb.json; firebase-import --database_url https://uvalib-api.firebaseio.com --path /homebanners --json fb.json --force --service_account /home/bamboo/uvalib-api-firebase-adminsdk-urtjy-b407df0805.json; firebase-import --database_url https://uvalib-api.firebaseio.com --path /v1/homebanners --json fb.json --force --service_account /home/bamboo/uvalib-api-firebase-adminsdk-urtjy-b407df0805.json",
     "bookplates-sync": "wget http://drupal.lib.virginia.edu/bookplates -O bookplates.json; node filter-bookplates.js > filtered-bookplates.json; firebase-import --database_url https://uvalib-api.firebaseio.com --path /bookplates --json filtered-bookplates.json --force --service_account /home/bamboo/uvalib-api-firebase-adminsdk-urtjy-b407df0805.json",
     "mediaobject-sync": "wget http://drupal.lib.virginia.edu/mediaobjects -O mediaobjects.json; node filter-mediaobjects.js > filtered-mediaobjects.json; firebase-import --database_url https://uvalib-api.firebaseio.com --path /mediaobjects --json filtered-mediaobjects.json --force --service_account /home/bamboo/uvalib-api-firebase-adminsdk-urtjy-b407df0805.json",
     "libraries-sync": "wget http://drupal.lib.virginia.edu/libraries -O libraries.json; wget http://drupal.lib.virginia.edu/taxonomy/place-types -O placeTypes.json; node filter-libraries.js > filtered-libraries.json; firebase-import --database_url https://uvalib-api.firebaseio.com --path /libraries --json filtered-libraries.json --force --service_account /home/bamboo/uvalib-api-firebase-adminsdk-urtjy-b407df0805.json",
@@ -52,6 +52,7 @@
     "imagemin-pngquant": "latest",
     "imagemin-webp": "latest",
     "moment": "latest",
+    "rename": "^1.0.4",
     "request": "latest",
     "rss": "latest",
     "social-aggregate": "git://github.com/uvalib/social-aggregate.git",
