simplified and cleaned dir script

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "staff-listing": "node getStaffFromLDAP.js > dist/feeds/directory.json",
     "areas-sync": "wget http://drupal.lib.virginia.edu/areas?_format=json -O areas.json; node filter-areas.js | ./extend-areas.js -f dist/feeds/directory.json  > filtered-areas.json; firebase-import --database_url https://uvalib-api.firebaseio.com --path /areas --json filtered-areas.json --force --service_account /home/bamboo/uvalib-api-firebase-adminsdk-urtjy-b407df0805.json",
     "teams-sync": "wget http://drupal.lib.virginia.edu/teams?_format=json -O teams.json; node filter-teams.js | ./extend-teams.js -f dist/feeds/directory.json > filtered-teams.json; firebase-import --database_url https://uvalib-api.firebaseio.com --path /teams --json filtered-teams.json --force --service_account /home/bamboo/uvalib-api-firebase-adminsdk-urtjy-b407df0805.json",
-    "people-sync": "wget http://drupal.lib.virginia.edu/people?_format=json -O people.json; node filter-people.js -f dist/feeds/directory.json > filtered-people.json; firebase-import --database_url https://uvalib-api.firebaseio.com --path /people --json filtered-people.json --force --service_account /home/bamboo/uvalib-api-firebase-adminsdk-urtjy-b407df0805.json",
+    "people-sync": "wget http://drupal.lib.virginia.edu/people?_format=json -O people.json; node new-filter-people.js > filtered-people.json; firebase-import --database_url https://uvalib-api.firebaseio.com --path /people --json filtered-people.json --force --service_account /home/bamboo/uvalib-api-firebase-adminsdk-urtjy-b407df0805.json",
     "directory-sync": "npm run staff-listing; npm run areas-sync; npm run teams-sync; npm run people-sync;",
     "group-listing-extend": "node updateGroupsFromWordpress.js -f dist/feeds/directory.json > dist/feeds/directory-new.json; mv dist/feeds/directory-new.json dist/feeds/directory.json",
     "staff-listing-test": "nodeunit test/directory.js",
@@ -64,6 +64,7 @@
     "imagemin-webp": "latest",
     "lodash": "^4.17.5",
     "moment": "^2.22.2",
+    "promised-ldap": "^0.3.0",
     "rename": "^1.0.4",
     "request": "latest",
     "request-promise": "^4.2.2",
